--- a/templates/website/site_section.html
+++ b/templates/website/site_section.html
@@ -1,64 +1,51 @@
 
 {%load static%}
-
-
 <section class="site-section">
   <div class="container">
 
     <div class="row mb-5 justify-content-center">
       <div class="col-md-7 text-center">
-        <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">Our Features</h2>
-        <p class="lead" data-aos="fade-up" data-aos-delay="100">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus minima neque tempora reiciendis.</p>
+        <h2 class="section-title mb-3" data-aos="fade-up" data-aos-delay="">Our Vision & Focus</h2>
+        <p class="lead" data-aos="fade-up" data-aos-delay="100">At Escalators, every project is a partnership. We are committed to driving success through innovative AI solutions that not only grow businesses but also create lasting positive impacts. Your success is our success.</p>
       </div>
     </div>
     
-    <div class="row" >
+    <div class="row">
       <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
-
         <div class="owl-carousel slide-one-item-alt">
-          <img src="{% static "images/slide_1.jpg" %}" alt="Image" class="img-fluid">
-          <img src="{% static "images/slide_2.jpg" %}" alt="Image" class="img-fluid">
-          <img src="{% static "images/slide_3.jpg" %}" alt="Image" class="img-fluid">
-          <img src="{% static "images/slide_4.jpg" %}" alt="Image" class="img-fluid">
+          <img src="{% static 'images/focus/1.jpg' %}" alt="Image" class="img-fluid">
+          <img src="{% static 'images/focus/7.jpg' %}" alt="Image" class="img-fluid">
+          <img src="{% static 'images/focus/5.jpg' %}" alt="Image" class="img-fluid">
+          <img src="{% static 'images/focus/2.jpg' %}" alt="Image" class="img-fluid">
         </div>
         <div class="custom-direction">
-          <a href="#" class="custom-prev"><span><i class="bi bi-arrow-left"></i></span></a><a href="#" class="custom-next"><span><i class="bi bi-arrow-right"></i></span></span></a>
+          <a href="#" class="custom-prev"><span><i class="bi bi-arrow-left"></i></span></a><a href="#" class="custom-next"><span><i class="bi bi-arrow-right"></i></span></a>
         </div>
-
       </div>
+
       <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-        
         <div class="owl-carousel slide-one-item-alt-text">
           <div>
-            <h2 class="section-title mb-3">Minimal and Modern Design</h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit  Quo suscipit omnis iste velit maxime.</p>
-
-            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+            <h2 class="section-title mb-3">Our Client-Centric Approach</h2>
+            <p class="lead">We treat every project like our own, ensuring a personalized and focused approach to achieve the best results.</p>
+            <p>By collaborating closely with clients, we make sure every decision aligns with their vision and goals, transforming ideas into success stories.</p>
           </div>
           <div>
-            <h2 class="section-title mb-3">Do things with love</h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit  Quo suscipit omnis iste velit maxime.</p>
-
-            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+            <h2 class="section-title mb-3">Technology for Positive Impact</h2>
+            <p class="lead">Our focus is to leverage technology for good, creating AI-powered solutions that enhance productivity and drive sustainable growth.</p>
+            <p>We believe in using AI to solve real-world problems, making businesses more efficient, adaptive, and innovative.</p>
           </div>
           <div>
-            <h2 class="section-title mb-3">Take your business online</h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit  Quo suscipit omnis iste velit maxime.</p>
-
-            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+            <h2 class="section-title mb-3">Innovation that Drives Growth</h2>
+            <p class="lead">Our AI solutions aren't just about technology—they're about driving real business growth.</p>
+            <p>Through cutting-edge AI and data-driven strategies, we help businesses unlock new opportunities and scale new heights.</p>
           </div>
           <div>
-            <h2 class="section-title mb-3">4 Our Dedicated Professionals</h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-            <p>Est qui eos quasi ratione nostrum excepturi id recusandae fugit omnis ullam pariatur itaque nisi voluptas impedit  Quo suscipit omnis iste velit maxime.</p>
-
-            <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
+            <h2 class="section-title mb-3">Our Success is Your Success</h2>
+            <p class="lead">We measure our success by the success of our clients. Your achievements reflect our dedication to excellence.</p>
+            <p>Each successful project is a step towards making technology more accessible and impactful for businesses around the world.</p>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
