--- a/templates/website/testimonials.html
+++ b/templates/website/testimonials.html
@@ -1,70 +1,58 @@
-
 {% load static %}
 
 <section class="site-section testimonial-wrap" id="testimonials-section" data-aos="fade">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Testimonials</h2>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12 text-center">
+        <h2 class="section-title mb-3">Our Projects</h2>
+        <p>Discover the innovative solutions we are developing to transform industries through technology.</p>
       </div>
-      <div class="slide-one-item home-slider owl-carousel">
-          <div>
-            <div class="testimonial">
-              
-              <blockquote class="mb-5">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                <div><img src="{% static "images/person_3.jpg" %}" alt="Image" class="w-50 img-fluid mb-3"></div>
-                <p>John Smith</p>
-              </figure>
-            </div>
-          </div>
-          <div>
-            <div class="testimonial">
-
-              <blockquote class="mb-5">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                <div><img src="{% static "images/person_2.jpg" %}" alt="Image" class="w-50 img-fluid mb-3"></div>
-                <p>Christine Aguilar</p>
-              </figure>
-              
-            </div>
-          </div>
-
-          <div>
-            <div class="testimonial">
-
-              <blockquote class="mb-5">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                <div><img src="{% static "images/person_4.jpg" %}" alt="Image" class="w-50 img-fluid mb-3"></div>
-                <p>Robert Spears</p>
-              </figure>
-
-              
-            </div>
-          </div>
-
-          <div>
-            <div class="testimonial">
-
-              <blockquote class="mb-5">
-                <p>&ldquo;Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur unde reprehenderit aperiam quaerat fugiat repudiandae explicabo animi minima fuga beatae illum eligendi incidunt consequatur. Amet dolores excepturi earum unde iusto.&rdquo;</p>
-              </blockquote>
-              <figure class="mb-4 d-flex align-items-center justify-content-center">
-                <div><img src="{% static "images/person_4.jpg" %}" alt="Image" class="w-50 img-fluid mb-3"></div>
-                <p>Bruce Rogers</p>
-              </figure>
-
-            </div>
-          </div>
-
-        </div>
-    </section>
+    </div>
+  </div>
+  <div class="slide-one-item home-slider owl-carousel">
+    <div>
+      <div class="testimonial">
+        <blockquote class="mb-5">
+          <p>&ldquo;Our team is dedicated to creating impactful technology that addresses real-world challenges. We leverage advanced AI and machine learning to develop solutions that enhance efficiency and drive positive change. Every project reflects our commitment to innovation and quality.&rdquo;</p>
+        </blockquote>
+<!--        <figure class="mb-4 d-flex align-items-center justify-content-center">-->
+<!--          <div><img src="{% static 'images/person_3.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>-->
+<!--          <p>Innovative Solutions Team</p>-->
+<!--        </figure>-->
+      </div>
+    </div>
+    <div>
+      <div class="testimonial">
+        <blockquote class="mb-5">
+          <p>&ldquo;With a focus on user-centric design, we develop applications that empower users and enhance their experiences. Our goal is to simplify complex processes and provide intuitive solutions that meet the needs of our clients and their customers.&rdquo;</p>
+        </blockquote>
+<!--        <figure class="mb-4 d-flex align-items-center justify-content-center">-->
+<!--          <div><img src="{% static 'images/person_2.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>-->
+<!--          <p>Client Success Team</p>-->
+<!--        </figure>-->
+      </div>
+    </div>
+    <div>
+      <div class="testimonial">
+        <blockquote class="mb-5">
+          <p>&ldquo;Our research initiatives are at the forefront of technological advancements, exploring new frontiers in AI and data science. We collaborate with experts across various fields to push boundaries and drive innovation that shapes the future.&rdquo;</p>
+        </blockquote>
+<!--        <figure class="mb-4 d-flex align-items-center justify-content-center">-->
+<!--          <div><img src="{% static 'images/person_4.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>-->
+<!--          <p>Research & Development Team</p>-->
+<!--        </figure>-->
+      </div>
+    </div>
+    <div>
+      <div class="testimonial">
+        <blockquote class="mb-5">
+          <p>&ldquo;We believe in the power of technology to solve pressing societal issues. Our projects are designed to enhance sustainability, improve health outcomes, and promote economic growth, ensuring a better tomorrow for everyone.&rdquo;</p>
+        </blockquote>
+<!--        <figure class="mb-4 d-flex align-items-center justify-content-center">-->
+<!--          <div><img src="{% static 'images/person_4.jpg' %}" alt="Image" class="w-50 img-fluid mb-3"></div>-->
+<!--          <p>Social Impact Team</p>-->
+<!--        </figure>-->
+      </div>
+    </div>
+  </div>
+</section>
