--- a/templates/website/blog.html
+++ b/templates/website/blog.html
@@ -1,50 +1,76 @@
-
-   {% load static%}
-    <section class="site-section" id="blog-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center" data-aos="fade">
-            <h2 class="section-title mb-3">Our Blog</h2>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="{% static "images/img_1.jpg" %}" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Where Do You Learn HTML & CSS in 2019?</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="{% static "images/img_4.jpg" %}" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Where Do You Learn HTML & CSS in 2019?</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="h-entry">
-              <a href="single.html">
-                <img src="{% static "images/img_3.jpg" %}" alt="Image" class="img-fluid">
-              </a>
-              <h2 class="font-size-regular"><a href="#">Where Do You Learn HTML & CSS in 2019?</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
-            </div> 
-          </div>
-          
-        </div>
+{% load static %}
+<section class="site-section" id="blog-section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-12 text-center" data-aos="fade">
+        <h2 class="section-title mb-3">Our Blog</h2>
       </div>
-    </section>
+    </div>
 
-   
+    <!-- Blogs Container -->
+    <div class="blogs-wrapper">
+      <div class="row blog-container">
+        <!-- Loop through blogs dynamically -->
+        {% for blog in blogs %}
+        <div class="col-md-6 col-lg-4 blog-item">
+          <div class="h-entry" data-aos="fade-up">
+            <a href="javascript:void(0);" onclick="loadBlog('{{ blog.id }}')">
+              <img src="{{ blog.primary_picture.url }}" alt="Image" class="img-fluid blog-image">
+            </a>
+            <h2 class="font-size-regular"><a href="javascript:void(0);" onclick="loadBlog('{{ blog.id }}')">{{ blog.title }}</a></h2>
+            <div class="meta mb-4">{{ blog.author_name }} <span class="mx-2">&bullet;</span> {{ blog.created_on }} <span class="mx-2">&bullet;</span> <a href="#">{{ blog.category }}</a></div>
+            <p>{{ blog.description|slice:":150" }}...</p>
+            <p><a href="javascript:void(0);" onclick="loadBlog('{{ blog.id }}')" class="btn btn-primary">Continue Reading...</a></p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+
+    <!-- Load More Blogs Button -->
+    <div class="text-center mt-5">
+      <a href="{% url 'website:more_blogs' %}" class="btn btn-secondary">More Blogs</a>
+    </div>
+  </div>
+</section>
+
+<!-- Include CSS for responsive scroll and layout -->
+<style>
+  .blog-container {
+    display: flex;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    scrollbar-width: none; /* For Firefox */
+    -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+  }
+
+  .blog-container::-webkit-scrollbar {
+    display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+  }
+
+  .blog-item {
+    flex: 0 0 100%;
+    scroll-snap-align: start;
+    padding: 10px;
+  }
+
+  @media(min-width: 768px) {
+    .blog-item {
+      flex: 0 0 33.333%;
+    }
+  }
+
+  .blog-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+</style>
+
+<!-- Include JavaScript for loading more blogs dynamically -->
+<script>
+  function loadBlog(blogId) {
+    // Send a POST request to the server to get the blog details based on the blog ID
+    window.location.href = `/blog/${blogId}/`;
+  }
+</script>
