--- a/templates/website/head.html
+++ b/templates/website/head.html
@@ -11,7 +11,7 @@
 
 <!-- Swiper JS -->
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
+<meta name="google-site-verification" content="Nqhf36Bumn-NNL3ybdVtVhMso5CmQNf8at4zTk2ULuA" />
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
